    basic zeitgeist integration. Many thanks to Seif Lotfy for the
    work on this!
  * merged lp:~mmcg069/software-center/usage-bubble, that makes the 
    usage counter look so much nicer :)
  * merged lp:~didrocks/software-center/smarter-app-filtering-level,
    many thanks
  * merged lp:~mmcg069/software-center/selectable-AppDescription,
    many thanks

  [ Kiwinote ]
  * softwarecenter/view/appdetailsview_gtk.py:
    - don't eat 'o ' character combinations within bullet points (LP: #646822)
      (test case: software-center deja-dup)
    - scale icon down when setting 'where is it' icon from path (LP: #645062)
      (test case: software-center briquolo (once installed))
  * softwarecenter/view/softwarepane.py:
    - don't offer to 'show 9k items' in searches, as we limit searches to 200
      items (LP: #648988)
      (test case: software-center search:library)

  [ Mohamed Amine IL Idrissi ]
  * Screenshots are now stored all in a single software-center
    directory (LP: #648284)
  * Thumbnails and screenshots are now reused (LP: #648279, #648278)

  [ Gary Lasker ]
  * softwarecenter/view/appview.py:
    - fix intermittent crash in _set_cursor (LP: #617004) 

 -- Gary Lasker <gary.lasker@canonical.com>  Wed, 29 Sep 2010 13:29:43 -0400

software-center (3.0.5) UNRELEASED; urgency=low

  [ Andrea Cimitan ]
  * fix rendering with Ambiance theme (LP: #635208)

  [ Kiwinote ]
  * softwarecenter/app.py:
    - support launching apturls via alt+F2 in gnome (LP: #653889)
  * softwarecenter/db/update.py:
    - use 'X-GNOME-FullName' rather than 'Name', when available (LP: #651260)
      (test case: software-center cheese empathy evolution gwibber)
  * softwarecenter/view/appview.py:
    - unblock pkg if transaction is cancelled (LP: #652903)
      (test case: launch s-c with a list view, choose a pkg, click install,
       cancel auth, click install again, install should work as normal)
  * softwarecenter/view/availablepane.py: